# python-wherescape

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTORS.md  README.md  data_test.csv  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
validators/: fact_dimension_join.py  readme.md
wherescape/: __init__.py  helper_functions.py  logging.py  wherescape.py  ws_env_template.py
wherescape/connectors/: __init__.py  api_connection.uiconfig  python_api_connection_no_browse.py
wherescape/connectors/anythingllm/: README.md  __init__.py  anythingllm_create_metadata.py  anythingllm_load_data.py  anythingllm_test.py  anythingllm_wrapper.py
wherescape/connectors/friday_pulse/: README.md  __init__.py  friday_pulse_create_metadata.py  friday_pulse_load_data.py  friday_pulse_wrapper.py
wherescape/connectors/gitlab/: __init__.py  gitlab_data_types_column_names.py  gitlab_wrapper.py  python_gitlab_create_metadata.py  python_gitlab_high_water_mark.py  python_gitlab_load_data.py  readme.md
wherescape/connectors/google_sheets/: google_sheet_wrapper.py  google_sheets.py  google_sheets_create_metadata.py  odbc_helper.py  python_script_google_sheet_load_data.py
wherescape/connectors/gsheet/: create_metadata.py  gheets_wrapper.py  gsheets_parsing.py  gsheets_wrapper.py  load_data.py  readme.md
wherescape/connectors/gsheet/tests/: fixtures.py  test_gsheets_wrapper.py
wherescape/connectors/hubspot/: __init__.py  collect_data.py  hubspot_wrapper.py  process_data.py  python_hubspot_check_missing_columns  python_hubspot_check_missing_columns.py  readme.md  send_data.py  send_to_hubspot.py  ticket_updates.py  tickets_merge.py  utils.py
wherescape/connectors/hubspot/send_data/: send_company_object.py  send_contact_object.py  send_deal_object.py  send_object_template.py
wherescape/connectors/jira/: __init__.py  jira_wrapper.py  python_jira_create_metadata.py  python_jira_load_data.py  readme.md
wherescape/connectors/nmbrs/: nmbrs_load_data.py  nmbrs_wrapper.py
wherescape/connectors/notion/: __init__.py  notion_wrapper.py  python_notion_create_metadata.py  python_notion_load_data.py
